--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@netlify/next": "^1.4.4",
     "eslint": "8.34.0",
     "eslint-config-next": "13.2.0",
     "next": "13.2.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "swr": "^2.0.4"
   }
 }
